initital: implementation
